--- a/src/view/down-website/detail.css
+++ b/src/view/down-website/detail.css
@@ -30,12 +30,29 @@ body{
     }
 }
 
-/* 隐藏 */
-.fn-hide {
-    display: none;
+/* 遮罩框的位置 */
+.weixin-tip-mask{
+    width:100%;
+    height:100%;
+    position: absolute;
+    left:0;
+    top:0;
+    z-index: 20;
 }
+.guideImg{
+    width:100%;
+    height:100%;
+}
+
+
 .yello{
     color:#fdcf38!important;
+}
+.ly-fl {
+    float: left;
+}
+.ly-fr {
+    float: right;
 }
 .logo{
     width: 100%;
@@ -315,7 +332,7 @@ div.fixed{
 }
 
 .item-box .item{
-    width: 92%;
+    width: 97%;
     padding:0 3%;
     margin:5px auto;
     background-color: #ffffff;
@@ -438,7 +455,7 @@ section.main-content{
 }
 
 .fold .text-content{
-    height:80px;
+    /* height:80px; */
 }
 
 .recommend .icon-paper-bg{
@@ -479,6 +496,12 @@ section.main-content{
 /*------------------------
     è¯„è®ºé€‰é¡¹å¡
 ------------------------*/
+.comment {
+    width: 98%;
+    line-height: 12px;
+    padding: 8px 1%;
+    color: #959595;
+}
 .comment-list .item{
     margin:0 auto;
     padding:10px 3%;
